--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <img src="./images/header-logo.svg" alt="Логотип" class="header__logo">
   </header>
   <main class="content">
-    <section class="profile profile__container">
+    <section class="profile">
+      <div class="profile__container">
         <img src="./images/Jacques-Yves-Cousteau.jpg" class="profile__avatar" alt="Фотография: Жак-Ив Кусто">
         <div class="profile__text">
           <h2 class="profile__name">Жак-Ив Кусто</h2>
@@ -20,6 +21,7 @@
           <button type="submit" class="profile__edit-button"></button>
         </div>
         <button type="submit" class="button profile__add-button"></button>
+      </div>
     </section>
     <section class="photo-grid">
       <ul class="photo-grid__items">
@@ -45,7 +47,8 @@
 
         <li class="photo-grid__item">
           <figure class="photo-grid__figure">
-            <img class="photo-grid__image" src="images/Krasnodar-krai-Krasnaya-polyana.jpg" alt="Фотография: Красная поляна">
+            <img class="photo-grid__image" src="images/Krasnodar-krai-Krasnaya-polyana.jpg"
+                 alt="Фотография: Красная поляна">
             <figcaption class="photo-grid__figcaption">
               <h3 class="photo-grid__name">Красная Поляна</h3>
               <button type="submit" class="photo-grid__like-button"></button>
@@ -86,7 +89,7 @@
       </ul>
     </section>
 
-    <section class="popup popup__edit-form">
+    <section class="popup">
       <form class="popup__container">
         <button class="popup__close-icon"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
@@ -108,8 +111,8 @@
   </footer>
 
 
-  </div>
-  <script src="./scripts/index.js"></script>
+</div>
+<script src="./scripts/index.js"></script>
 </body>
 </html>
 
