--- a/index.html
+++ b/index.html
@@ -13,96 +13,77 @@
   </header>
   <main class="content">
     <section class="profile">
-      <div class="profile__container">
-        <img src="./images/Jacques-Yves-Cousteau.jpg" class="profile__avatar" alt="Фотография: Жак-Ив Кусто">
+        <img src="./images/Jacques-Yves-Cousteau.jpg" class="profile__avatar" alt="Фотография профиля">
         <div class="profile__text">
-          <h2 class="profile__name">Жак-Ив Кусто</h2>
+          <h1 class="profile__name">Жак-Ив Кусто</h1>
           <p class="profile__job">Исследователь океана</p>
-          <button type="submit" class="profile__edit-button"></button>
+          <button aria-label="Редактирование профиля" type="submit" class="profile__edit-button"></button>
         </div>
-        <button type="submit" class="button profile__add-button"></button>
-      </div>
+        <button aria-label="Добавление карточки с фото" type="submit" class="profile__add-button"></button>
     </section>
-    <section class="photo-grid">
-      <ul class="photo-grid__items">
-        <li class="photo-grid__item">
-          <figure class="photo-grid__figure">
-            <img class="photo-grid__image" src="images/Saint-Petersburg.jpg" alt="Фотография: Санкт-Петербург">
-            <figcaption class="photo-grid__figcaption">
-              <h3 class="photo-grid__name">Санкт-Петербург</h3>
-              <button type="submit" class="photo-grid__like-button"></button>
-            </figcaption>
-          </figure>
-        </li>
+    <section class="photo-cards">
+      <ul class="photo-cards__list">
+          <li class="photo-card">
+            <div class="photo-card__image-container">
+              <img class="photo-card__image" src="images/Saint-Petersburg.jpg" alt="Фотография: Санкт-Петербург">
+            </div>
+            <div class="photo-card__description">
+              <h2 class="photo-card__name">Санкт-Петербург</h2>
+              <button aria-label="Лайк" type="button" class="photo-card__like-button"></button>
+            </div>
+          </li>
 
-        <li class="photo-grid__item">
-          <figure class="photo-grid__figure">
-            <img class="photo-grid__image" src="images/Vnukovo.jpg" alt="Фотография: Внуково">
-            <figcaption class="photo-grid__figcaption">
-              <h3 class="photo-grid__name">Внуково</h3>
-              <button type="submit" class="photo-grid__like-button"></button>
-            </figcaption>
-          </figure>
-        </li>
+          <li class="photo-card">
+            <div class="photo-card__image-container">
+              <img class="photo-card__image" src="images/Vnukovo.jpg" alt="Фотография: Внуково">
+            </div>
+            <div class="photo-card__description">
+              <h2 class="photo-card__name">Внуково</h2>
+              <button aria-label="Лайк" type="button" class="photo-card__like-button"></button>
+            </div>
+          </li>
 
-        <li class="photo-grid__item">
-          <figure class="photo-grid__figure">
-            <img class="photo-grid__image" src="images/Krasnodar-krai-Krasnaya-polyana.jpg"
-                 alt="Фотография: Красная поляна">
-            <figcaption class="photo-grid__figcaption">
-              <h3 class="photo-grid__name">Красная Поляна</h3>
-              <button type="submit" class="photo-grid__like-button"></button>
-            </figcaption>
-          </figure>
+          <li class="photo-card">
+            <div class="photo-card__image-container">
+              <img class="photo-card__image" src="images/Krasnodar-krai-Krasnaya-polyana.jpg" alt="Фотография: Красная поляна">
+            </div>
+            <div class="photo-card__description">
+              <h2 class="photo-card__name">Красная Поляна</h2>
+              <button aria-label="Лайк" type="button" class="photo-card__like-button"></button>
+            </div>
+          </li>
 
-        </li>
 
-        <li class="photo-grid__item">
-          <figure class="photo-grid__figure">
-            <img class="photo-grid__image" src="images/Republic-of-Karelia.jpg" alt="Фотография: Карелия">
-            <figcaption class="photo-grid__figcaption">
-              <h3 class="photo-grid__name">Карелия</h3>
-              <button type="submit" class="photo-grid__like-button"></button>
-            </figcaption>
-          </figure>
-        </li>
+          <li class="photo-card">
+            <div class="photo-card__image-container">
+              <img class="photo-card__image" src="images/Republic-of-Karelia.jpg" alt="Фотография: Карелия">
+            </div>
+            <div class="photo-card__description">
+              <h2 class="photo-card__name">Карелия</h2>
+              <button aria-label="Лайк" type="button" class="photo-card__like-button"></button>
+            </div>
+          </li>
 
-        <li class="photo-grid__item">
-          <figure class="photo-grid__figure">
-            <img class="photo-grid__image" src="images/Mount-Elbrus.jpg" alt="Фотография: Эльбрус">
-            <figcaption class="photo-grid__figcaption">
-              <h3 class="photo-grid__name">Эльбрус</h3>
-              <button type="submit" class="photo-grid__like-button"></button>
-            </figcaption>
-          </figure>
-        </li>
+          <li class="photo-card">
+            <div class="photo-card__image-container">
+              <img class="photo-card__image" src="images/Mount-Elbrus.jpg" alt="Фотография: Эльбрус">
+            </div>
+            <div class="photo-card__description">
+              <h2 class="photo-card__name">Эльбрус</h2>
+              <button aria-label="Лайк" type="button" class="photo-card__like-button"></button>
+            </div>
+          </li>
 
-        <li class="photo-grid__item">
-          <figure class="photo-grid__figure">
-            <img class="photo-grid__image" src="images/Baikal-Lake.jpg" alt="Фотография: озеро Байкал">
-            <figcaption class="photo-grid__figcaption">
-              <h3 class="photo-grid__name">Байкал</h3>
-              <button type="submit" class="photo-grid__like-button"></button>
-            </figcaption>
-          </figure>
-        </li>
+          <li class="photo-card">
+            <div class="photo-card__image-container">
+              <img class="photo-card__image" src="images/Baikal-Lake.jpg" alt="Фотография: озеро Байкал">
+            </div>
+            <div class="photo-card__description">
+              <h2 class="photo-card__name">Байкал</h2>
+              <button aria-label="Лайк" type="button" class="photo-card__like-button"></button>
+            </div>
+          </li>
       </ul>
-    </section>
-
-    <section class="popup">
-      <form class="popup__container">
-        <button class="popup__close-icon"></button>
-        <h2 class="popup__title">Редактировать профиль</h2>
-        <div class="popup__input-fields">
-          <label for="name" class="popup__label">
-            <input class="popup__input popup__name-field" type="text" id="name">
-          </label>
-          <label for="job" class="popup__label">
-            <input class="popup__input popup__job-field" type="text" id="job">
-          </label>
-        </div>
-        <button type="submit" class="popup__submit-btn">Сохранить</button>
-      </form>
     </section>
   </main>
 
@@ -110,6 +91,23 @@
     © 2022 Mesto Russia by Elizaveta Gasay
   </footer>
 
+  <div class="popup">
+    <div class="popup__container">
+      <button class="popup__close-icon" type="button"></button>
+      <h2 class="popup__title">Редактировать профиль</h2>
+      <form class="popup__form popup__form-inputs">
+        <label for="name-field" class="popup__label">
+          <input class="popup__input popup__input_field_name" type="text" name="username" id="name-field">
+        </label>
+        <label for="job-field" class="popup__label">
+          <input class="popup__input popup__input_field_job" type="text" name="userJob" id="job-field">
+        </label>
+      </form>
+      <form class="popup__form popup__form-submit">
+        <button type="submit" class="popup__submit-btn">Сохранить</button>
+      </form>
+    </div>
+  </div>
 
 </div>
 <script src="./scripts/index.js"></script>
