--- a/index.html
+++ b/index.html
@@ -24,53 +24,57 @@
     <section class="photo-cards">
       <ul class="photo-cards__list">
           <li class="photo-card">
-            <div class="photo-card__image-container">
-              <img class="photo-card__image" src="images/Saint-Petersburg.jpg" alt="Фотография: Санкт-Петербург">
-            </div>
+            <img class="photo-card__image" src="images/Saint-Petersburg.jpg" alt="Фотография: Санкт-Петербург">
+            <button aria-label="Мусорка" type="button" class="photo-card__trash"></button>
             <div class="photo-card__description">
               <h2 class="photo-card__name">Санкт-Петербург</h2>
-              <button aria-label="Лайк" type="button" class="photo-card__like-button"></button>
+              <button aria-label="Лайк" type="button" class="photo-card__like"></button>
             </div>
           </li>
 
           <li class="photo-card">
-              <img class="photo-card__image" src="images/Vnukovo.jpg" alt="Фотография: Внуково">
+            <img class="photo-card__image" src="images/Vnukovo.jpg" alt="Фотография: Внуково">
+            <button aria-label="Мусорка" type="button" class="photo-card__trash"></button>
             <div class="photo-card__description">
               <h2 class="photo-card__name">Внуково</h2>
-              <button aria-label="Лайк" type="button" class="photo-card__like-button"></button>
+              <button aria-label="Лайк" type="button" class="photo-card__like"></button>
             </div>
           </li>
 
           <li class="photo-card">
-              <img class="photo-card__image" src="images/Krasnodar-krai-Krasnaya-polyana.jpg" alt="Фотография: Красная поляна">
+            <img class="photo-card__image" src="images/Krasnodar-krai-Krasnaya-polyana.jpg" alt="Фотография: Красная поляна">
+            <button aria-label="Мусорка" type="button" class="photo-card__trash"></button>
             <div class="photo-card__description">
               <h2 class="photo-card__name">Красная Поляна</h2>
-              <button aria-label="Лайк" type="button" class="photo-card__like-button"></button>
+              <button aria-label="Лайк" type="button" class="photo-card__like"></button>
             </div>
           </li>
 
 
           <li class="photo-card">
-              <img class="photo-card__image" src="images/Republic-of-Karelia.jpg" alt="Фотография: Карелия">
+            <img class="photo-card__image" src="images/Republic-of-Karelia.jpg" alt="Фотография: Карелия">
+            <button aria-label="Мусорка" type="button" class="photo-card__trash"></button>
             <div class="photo-card__description">
               <h2 class="photo-card__name">Карелия</h2>
-              <button aria-label="Лайк" type="button" class="photo-card__like-button"></button>
+              <button aria-label="Лайк" type="button" class="photo-card__like"></button>
             </div>
           </li>
 
           <li class="photo-card">
-              <img class="photo-card__image" src="images/Mount-Elbrus.jpg" alt="Фотография: Эльбрус">
+            <img class="photo-card__image" src="images/Mount-Elbrus.jpg" alt="Фотография: Эльбрус">
+            <button aria-label="Мусорка" type="button" class="photo-card__trash"></button>
             <div class="photo-card__description">
               <h2 class="photo-card__name">Эльбрус</h2>
-              <button aria-label="Лайк" type="button" class="photo-card__like-button"></button>
+              <button aria-label="Лайк" type="button" class="photo-card__like"></button>
             </div>
           </li>
 
           <li class="photo-card">
-              <img class="photo-card__image" src="images/Baikal-Lake.jpg" alt="Фотография: озеро Байкал">
+            <img class="photo-card__image" src="images/Baikal-Lake.jpg" alt="Фотография: озеро Байкал">
+            <button aria-label="Мусорка" type="button" class="photo-card__trash"></button>
             <div class="photo-card__description">
               <h2 class="photo-card__name">Байкал</h2>
-              <button aria-label="Лайк" type="button" class="photo-card__like-button"></button>
+              <button aria-label="Лайк" type="button" class="photo-card__like"></button>
             </div>
           </li>
       </ul>
@@ -81,23 +85,57 @@
     © 2022 Mesto Russia by Elizaveta Gasay
   </footer>
 
-  <div class="popup">
+  <div class="popup popup_type_edit-profile">
     <div class="popup__container">
       <button class="popup__close-icon" type="button"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
-      <form class="popup__form" name="edit-form">
+      <form class="popup__form popup__edit-form" name="edit-form">
         <label for="name-field" class="popup__label">
-          <input class="popup__input popup__input_field_name" type="text" name="username" id="name-field">
+          <input placeholder="Введите ваше имя" class="popup__input popup__input_field_name" type="text" name="username" id="name-field">
         </label>
         <label for="job-field" class="popup__label">
-          <input class="popup__input popup__input_field_job" type="text" name="userJob" id="job-field">
+          <input placeholder="Чем Вы занимаетесь?" class="popup__input popup__input_field_job" type="text" name="userJob" id="job-field">
         </label>
         <button type="submit" class="popup__submit-btn">Сохранить</button>
       </form>
     </div>
   </div>
 
+  <div class="popup popup_type_add-card">
+    <div class="popup__container">
+      <button class="popup__close-icon" type="button"></button>
+      <h2 class="popup__title">Новое место</h2>
+      <form class="popup__form popup__add-form" name="add-form">
+        <label for="picture-name" class="popup__label">
+          <input placeholder="Название" class="popup__input popup__input_field_card-name" type="text" name="username" id="picture-name">
+        </label>
+        <label for="link-field" class="popup__label">
+          <input placeholder="Ссылка на картинку" class="popup__input popup__input_field_card-image" type="text" name="userJob" id="link-field">
+        </label>
+        <button type="submit" class="popup__submit-btn popup__add-button">Создать</button>
+      </form>
+    </div>
+  </div>
+
+  <div class="popup popup_type_image">
+    <div class="popup__image-container">
+      <button class="popup__close-icon" type="button"></button>
+      <img class="popup__image" src="#" alt="#">
+      <h2 class="popup__title-image"></h2>
+    </div>
+  </div>
+
 </div>
+<template id="card-template">
+  <li class="photo-card">
+    <img class="photo-card__image" src="#" alt="#">
+    <button aria-label="Мусорка" type="button" class="photo-card__trash"></button>
+    <div class="photo-card__description">
+      <h2 class="photo-card__name"></h2>
+      <button aria-label="Лайк" type="button" class="photo-card__like"></button>
+    </div>
+  </li>
+</template>
 <script src="./scripts/index.js"></script>
 </body>
 </html>
