--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
     <div class="popup__container">
       <button class="popup__close-icon" type="button"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
-      <form class="popup__form popup__edit-form" name="edit-form">
-        <label for="name-field" class="popup__label">
-          <input placeholder="Введите ваше имя" class="popup__input popup__input_field_name" type="text" name="username" id="name-field">
+      <form class="popup__form popup__edit-form" name="edit-form" novalidate>
+        <label for="name" class="popup__label">
+          <input placeholder="Введите ваше имя" class="popup__input popup__input_field_name" type="text" name="username" id="name" minlength="2" maxlength="40" required>
+          <span class="popup__error" id="username-error"></span>
         </label>
-        <label for="job-field" class="popup__label">
-          <input placeholder="Чем Вы занимаетесь?" class="popup__input popup__input_field_job" type="text" name="userJob" id="job-field">
+        <label for="job" class="popup__label">
+          <input placeholder="Чем Вы занимаетесь?" class="popup__input popup__input_field_job" type="text" name="job" id="job" minlength="2" maxlength="200" required>
+          <span class="popup__error" id="job-error"></span>
         </label>
         <button type="submit" class="popup__submit-btn">Сохранить</button>
       </form>
@@ -52,12 +54,14 @@
     <div class="popup__container">
       <button class="popup__close-icon" type="button"></button>
       <h2 class="popup__title">Новое место</h2>
-      <form class="popup__form popup__add-form" name="add-form">
-        <label for="picture-name" class="popup__label">
-          <input placeholder="Название" class="popup__input popup__input_field_card-name" type="text" name="username" id="picture-name">
+      <form class="popup__form popup__add-form" name="add-form" novalidate>
+        <label for="card-name" class="popup__label">
+          <input placeholder="Название" class="popup__input popup__input_field_card-name" type="text" name="card-name" id="card-name" minlength="2" maxlength="30" required>
+          <span class="popup__error" id="card-name-error"></span>
         </label>
-        <label for="link-field" class="popup__label">
-          <input placeholder="Ссылка на картинку" class="popup__input popup__input_field_card-image" type="text" name="userJob" id="link-field">
+        <label for="card-link" class="popup__label">
+          <input placeholder="Ссылка на картинку" class="popup__input popup__input_field_card-image" type="url" name="card-link" id="card-link" required>
+          <span class="popup__error" id="card-link-error"></span>
         </label>
         <button type="submit" class="popup__submit-btn popup__add-button">Создать</button>
       </form>
@@ -84,7 +88,7 @@
   </li>
 </template>
 <script src="./scripts/index.js"></script>
-
+<script src="./scripts/validate.js"></script>
 </body>
 </html>
 
