--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   </header>
   <main class="content">
     <section class="profile">
-        <img src="./images/Jacques-Yves-Cousteau.jpg" class="profile__avatar" alt="Фотография профиля">
-        <div class="profile__text">
-          <h1 class="profile__name">Жак-Ив Кусто</h1>
-          <p class="profile__job">Исследователь океана</p>
-          <button aria-label="Редактирование профиля" type="button" class="profile__edit-button"></button>
-        </div>
-        <button aria-label="Добавление карточки с фото" type="button" class="profile__add-button"></button>
+      <img src="./images/Jacques-Yves-Cousteau.jpg" class="profile__avatar" alt="Фотография профиля">
+      <div class="profile__text">
+        <h1 class="profile__name">Жак-Ив Кусто</h1>
+        <p class="profile__job">Исследователь океана</p>
+        <button aria-label="Редактирование профиля" type="button" class="profile__edit-button"></button>
+      </div>
+      <button aria-label="Добавление карточки с фото" type="button" class="profile__add-button"></button>
     </section>
     <section class="photo-cards">
       <ul class="photo-cards__list">
@@ -37,12 +37,14 @@
       <button class="popup__close-icon" type="button"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
       <form class="popup__form popup__edit-form" name="edit-form" novalidate>
-        <label for="name" class="popup__label">
-          <input placeholder="Введите ваше имя" class="popup__input popup__input_field_name" type="text" name="username" id="name" minlength="2" maxlength="40" required>
+        <label for="username" class="popup__label">
+          <input placeholder="Введите ваше имя" class="popup__input popup__input_field_name" type="text" name="username"
+                 id="username" minlength="2" maxlength="40" required value="Жак-Ив Кусто">
           <span class="popup__error" id="username-error"></span>
         </label>
         <label for="job" class="popup__label">
-          <input placeholder="Чем Вы занимаетесь?" class="popup__input popup__input_field_job" type="text" name="job" id="job" minlength="2" maxlength="200" required>
+          <input placeholder="Чем Вы занимаетесь?" class="popup__input popup__input_field_job" type="text" name="job"
+                 id="job" minlength="2" maxlength="200" required value="Исследователь океана">
           <span class="popup__error" id="job-error"></span>
         </label>
         <button type="submit" class="popup__submit-btn">Сохранить</button>
@@ -56,11 +58,13 @@
       <h2 class="popup__title">Новое место</h2>
       <form class="popup__form popup__add-form" name="add-form" novalidate>
         <label for="card-name" class="popup__label">
-          <input placeholder="Название" class="popup__input popup__input_field_card-name" type="text" name="card-name" id="card-name" minlength="2" maxlength="30" required>
+          <input placeholder="Название" class="popup__input popup__input_field_card-name" type="text" name="card-name"
+                 id="card-name" minlength="2" maxlength="30" required>
           <span class="popup__error" id="card-name-error"></span>
         </label>
         <label for="card-link" class="popup__label">
-          <input placeholder="Ссылка на картинку" class="popup__input popup__input_field_card-image" type="url" name="card-link" id="card-link" required>
+          <input placeholder="Ссылка на картинку" class="popup__input popup__input_field_card-image" type="url"
+                 name="card-link" id="card-link" required>
           <span class="popup__error" id="card-link-error"></span>
         </label>
         <button type="submit" class="popup__submit-btn popup__add-button">Создать</button>
@@ -87,8 +91,9 @@
     </div>
   </li>
 </template>
-<script src="./scripts/index.js"></script>
+<script src="./scripts/constants.js"></script>
 <script src="./scripts/validate.js"></script>
+<script src="./scripts/index.js"></script>
 </body>
 </html>
 
