--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                  id="job" minlength="2" maxlength="200" required value="Исследователь океана">
           <span class="popup__error" id="job-error"></span>
         </label>
-        <button type="submit" class="popup__submit-btn">Сохранить</button>
+        <button type="submit" class="popup__submit-btn popup__edit-button">Сохранить</button>
       </form>
     </div>
   </div>
