--- a/index.html
+++ b/index.html
@@ -91,9 +91,8 @@
     </div>
   </li>
 </template>
-<script src="./scripts/constants.js"></script>
-<script src="./scripts/validate.js"></script>
-<script src="./scripts/index.js"></script>
+
+<script type="module" src="./scripts/index.js"></script>
 </body>
 </html>
 
