--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
     <div class="popup__container">
       <button class="popup__close-icon" type="button"></button>
       <h2 class="popup__title">Обновить аватар</h2>
-      <form class="popup__form popup__update-avatar-form" name="change-avatar" novalidate>
+      <form class="popup__form popup__update-avatar-form" name="change-avatar-form" novalidate>
         <label for="avatar" class="popup__label">
           <input placeholder="Ссылка на новый аватар" class="popup__input popup__input_update-avatar" type="url"
                  name="avatar"
